--- a/airs/content/pages/rules/cryptography/338/index.adoc
+++ b/airs/content/pages/rules/cryptography/338/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/338/
 :category: cryptography
 :description: This requirement establishes the importance of implementing perfect forward secrecy for communications with critical sensitive information.
-:keywords: Perfect, Forward, Secrecy, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Perfect, Forward, Secrecy, ASVS, CAPEC, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R338. Implement perfect forward secrecy
@@ -26,17 +26,25 @@ which represents an increase in the overall security of the system.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength].
+. [[r1]] link:http://capec.mitre.org/data/definitions/117.html[CAPEC-117: Interception].
+An adversary monitors data streams to or from the target for information
+gathering purposes.
+This attack may be undertaken to solely gather sensitive information or to
+support a further attack against the target.
+This attack pattern can involve sniffing network traffic as well as other types
+of data streams (e.g. radio).
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength].
 The software stores or transmits sensitive data using an encryption scheme that
 is theoretically sound,
 but is not strong enough for the level of protection required.
 
-. [[r2]] link:https://csrc.nist.gov/publications/detail/sp/800-52/rev-2/final[NIST 800-52 3.3.1.1 Cipher Suites for TLS 1.2 and Earlier Versions]
+. [[r3]] link:https://csrc.nist.gov/publications/detail/sp/800-52/rev-2/final[NIST 800-52 3.3.1.1 Cipher Suites for TLS 1.2 and Earlier Versions]
 Prefer ephemeral keys over static keys
 (i.e., prefer DHE over DH, and prefer ECDHE 690 over ECDH).
 Ephemeral keys provide **perfect forward secrecy**.
 
-. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
 such as financial, healthcare, and *PII*.
 Attackers may steal or modify such weakly protected data to conduct credit card
@@ -45,18 +53,18 @@ Sensitive data may be compromised without extra protection,
 such as encryption at rest or in transit, and requires special precautions when
 exchanged with the browser.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.1 Communications Security Requirements.(9.1.1)]
 Verify that secured TLS is used for all client connectivity,
 and does not fall back to insecure or unencrypted protocols.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.1 Communications Security Requirements.(9.1.2)]
 Verify using online or up to date *TLS* testing tools that only strong
 algorithms, ciphers, and protocols are enabled,
 with the strongest algorithms and ciphers set as preferred.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.4]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.4]
 Fully document and implement all key-management processes and procedures for
 cryptographic keys including cryptographic key changes for keys that have
 reached the end of their cryptoperiod.
