--- a/airs/content/pages/asserts/index.adoc
+++ b/airs/content/pages/asserts/index.adoc
@@ -42,4 +42,4 @@ and enforce them across your software life cycle;
 (for every vulnerability check, *Asserts* prints the `ToE` fingerprint);
 - have an interactive cycle of vulnerability closing.
 
-[button-asserts]#link:https://fluidattacks.com/asserts/[Read API Documentation]#
+[button-asserts]#link:https://fluidattacks.com/resources/doc/asserts/[Read API Documentation]#
