skims\test(back): #3365.7 add nested react typescript case
- Rename functions to invalidate the cache and add translations


Former-commit-id: ca25cfc15f723a4f9b5a24b292c742484e556da2

--- a/skims/static/translations/findings/F073.yaml
+++ b/skims/static/translations/findings/F073.yaml
@@ -1,4 +1,4 @@
-src.lib_path.f073.switch_without_default:
+src.lib_path.f073.switch_no_default:
   en: Switch without default in {path}
   es: Switch sin caso por defecto en {path}
 utils.model.finding.enum.F073.description:
