airs\feat(doc): #3148.30 add capec refs to some rules
- Added CAPEC references to R337, R327, R072 and R062
- Updated R072 and R062 keywords


Former-commit-id: f4aa957a18cdcc3c490725320ade1a470674cfc2

--- a/airs/content/pages/rules/architecture/072/index.adoc
+++ b/airs/content/pages/rules/architecture/072/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/072/
 :category: architecture
 :description: This requirement establishes the importance of defining an adequate maximum response time with the maximum expected concurrence.
-:keywords: Time, Response, Concurrency, ASVS, CWE, GDPR, Rules, Ethical Hacking, Pentesting
+:keywords: Time, Response, Concurrency, ASVS, CAPEC, CWE, GDPR, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R072. Set maximum response time
@@ -31,31 +31,38 @@ number of concurrent users reaches its peak.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/400.html[CWE-400: Uncontrolled Resource Consumption].
+. [[r1]] link:http://capec.mitre.org/data/definitions/125.html[CAPEC-125: Flooding].
+An adversary consumes the resources of a target by rapidly engaging in a large
+number of interactions with the target.
+This type of attack generally exposes a weakness in rate limiting or flow.
+When successful this attack prevents legitimate users from accessing the
+service and can cause the target to crash.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/400.html[CWE-400: Uncontrolled Resource Consumption].
 The software does not properly control the allocation and maintenance of a
 limited resource thereby enabling an actor to influence the amount of resources
 consumed,
 eventually leading to the exhaustion of available resources.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/770.html[CWE-770: Allocation of Resources Without Limits or Throttling].
+. [[r3]] link:https://cwe.mitre.org/data/definitions/770.html[CWE-770: Allocation of Resources Without Limits or Throttling].
 The software allocates a reusable resource or group of resources on behalf of
 an actor without imposing any restrictions on the size or number of resources
 that can be allocated,
 in violation of the intended security policy for that actor.
 
-. [[r3]] link:https://gdpr-info.eu/art-32-gdpr/[GDPR. Art. 32: Security of processing.(1)(c).]
+. [[r4]] link:https://gdpr-info.eu/art-32-gdpr/[GDPR. Art. 32: Security of processing.(1)(c).]
 The controller and the processor shall implement appropriate technical and
 organizational measures to ensure an appropriate level of security,
 including the the ability to restore the availability and access to personal
 data in a timely manner in the event of a physical or technical incident.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.4)]
 Verify the application has sufficient anti-automation controls to detect and
 protect against data exfiltration, excessive business logic requests,
 excessive file uploads or denial of service attacks.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.4 GraphQL and other Web Service Data Layer Security Requirements.(13.4.1)]
 Verify that query whitelisting or a combination of depth limiting and amount
 limiting should be used to prevent *GraphQL* or data layer expression denial of
